# customer_support_agent

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  COMMIT_GUIDELINES.md  CONTRIBUTING.md  Dockerfile  FINAL_REVIEW.md  Makefile  PROJECT_SHOWCASE.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  sitecustomize.py  temp_find_warning.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-build.yml
data/analytics/: metrics.json
docs/: architecture.md  architecture_diagram.md  demo_script.md  deployment.md  engineering_review.md  evaluation.md  example_conversations.md  future_improvements.md  installation.md  known_limitations.md  screenshots.md  sequence_diagram.md  streamlit_cloud.md  workflow_diagram.md
examples/: example_queries.md  sample_outputs.md
examples/demo/: README.md  ingest_demo.py  run_demo.py
examples/demo/docs/: billing_faq.md  password_reset.md
scripts/: run_lint.sh  run_tests.sh
src/support_agent/: __init__.py  main.py
src/support_agent/analytics/: __init__.py  collector.py  dashboard.py  models.py  sample_data.py  store.py
src/support_agent/analytics/charts/: __init__.py  base.py  confidence.py  conversation_stats.py  escalation.py  latency.py  persona_distribution.py  retrieval_scores.py  top_documents.py
src/support_agent/application/: agent_service.py  conversation_memory.py  escalation_engine.py  ingestion_service.py  persona_detector.py  response_generator.py  retrieval_service.py
src/support_agent/config/: settings.py
src/support_agent/domain/: documents.py  escalation.py  exceptions.py  handoff.py  memory.py  personas.py  request.py  responses.py
src/support_agent/graph/: dependencies.py  state.py  workflow.py
src/support_agent/graph/nodes/: confidence_node.py  context_validation_node.py  escalation_node.py  final_response_node.py  handoff_node.py  persona_node.py  query_optimization_node.py  response_node.py  retrieval_node.py  user_input_node.py
src/support_agent/infrastructure/: cache.py  factories.py  metrics.py
src/support_agent/infrastructure/di/: container.py
src/support_agent/infrastructure/embeddings/: base.py  sentence_transformer_embeddings.py
src/support_agent/infrastructure/llm/: __init__.py  base.py  mock_client.py  openai_client.py
src/support_agent/infrastructure/loaders/: chunker.py  document_loader.py
src/support_agent/infrastructure/reranker/: cross_encoder.py
src/support_agent/infrastructure/retrievers/: bm25.py  fusion.py  hybrid.py
src/support_agent/infrastructure/telemetry/: logger.py
src/support_agent/infrastructure/vectorstores/: base.py  chroma_store.py  inmemory.py
src/support_agent/logging/: config.py
src/support_agent/presentation/: cli.py  streamlit_app.py
src/support_agent/prompts/: persona_prompts.py  response_prompts.py
src/support_agent/utils/: cache.py  health.py  rate_limiter.py  security.py
tests/: conftest.py
tests/e2e/: test_smoke.py
tests/integration/: test_service_request_validation.py  test_support_agent_workflow.py
tests/unit/: test_analytics.py  test_cache.py  test_conversation_memory.py  test_escalation_engine.py  test_health_checker.py  test_hybrid_retriever.py  test_openai_client.py  test_persona_detector.py  test_prompt_builders.py  test_rate_limiter.py  test_response_generator.py  test_response_generator_extra.py  test_security_utils.py  test_settings.py
