[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-support-agent"
version = "0.1.0"
description = "Persona-adaptive customer support agent using LLMs, RAG, LangGraph, and human escalation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Darsh" }
]
dependencies = [
  "openai>=1.88.0,<2.0.0",
  "langchain>=0.3.25,<0.4.0",
  "langchain-core>=0.3.65,<0.4.0",
  "langchain-community>=0.3.25,<0.4.0",
  "langchain-text-splitters>=0.3.8,<0.4.0",
  "langgraph>=0.4.8,<0.5.0",
  "chromadb>=1.0.12,<2.0.0",
  "sentence-transformers>=4.1.0,<5.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.9.0,<3.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "pypdf>=5.6.0,<6.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "streamlit>=1.45.0,<2.0.0",
  "typer>=0.16.0,<1.0.0",
  "rich>=14.0.0,<15.0.0",
  "structlog>=25.4.0,<26.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-cov>=6.2.0,<7.0.0",
  "ruff>=0.11.13,<1.0.0",
  "mypy>=1.16.0,<2.0.0"
]

[project.scripts]
support-agent = "support_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src/support_agent --cov-report=term-missing"
